@@ -3,7 +3,6 @@ package codesquad.fineants;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.util.Strings;
 import org.junit.jupiter.api.AfterEach;
@@ -58,8 +57,8 @@ import lombok.extern.slf4j.Slf4j;
 @Import(value = {AmazonS3Config.class})
 @AutoConfigureWebTestClient
 @Testcontainers
-@WithMockUser(username = "dragonbead95@naver.com", roles = {"USER"})
-public class AbstractContainerBaseTest {
+@WithMockUser(username = "dragonbead95@naver.com")
+public abstract class AbstractContainerBaseTest {
 	private static final String REDIS_IMAGE = "redis:7-alpine";
 	private static final int REDIS_PORT = 6379;
 
@@ -147,15 +146,15 @@ public class AbstractContainerBaseTest {
 		return member;
 	}
 
-	protected Member createOauthMember(String nickname, String email, String provider, String profileUrl) {
+	protected Member createOauthMember() {
 		Role userRole = roleRepository.findRoleByRoleName("ROLE_USER")
 			.orElseThrow(() -> new FineAntsException(RoleErrorCode.NOT_EXIST_ROLE));
 		// 회원 생성
 		Member member = Member.oauthMember(
-			email,
-			nickname,
-			provider,
-			profileUrl
+			"fineants1234@gmail.com",
+			"fineants1234",
+			"google",
+			"profileUrl1"
 		);
 		// 역할 설정
 		member.addMemberRole(MemberRole.create(member, userRole));
@@ -237,18 +236,7 @@ public class AbstractContainerBaseTest {
 	}
 
 	protected Stock createKakaoStock() {
-		return createStock(
-			"035720",
-			"카카오보통주",
-			"Kakao",
-			"KR7035720002",
-			"서비스업"
-		);
-	}
-
-	protected Stock createStock(String tickerSymbol, String companyName, String companyNameEng, String stockCode,
-		String sector) {
-		return Stock.of(tickerSymbol, companyName, companyNameEng, stockCode, sector, Market.KOSPI);
+		return Stock.of("035720", "카카오보통주", "Kakao", "KR7035720002", "서비스업", Market.KOSPI);
 	}
 
 	protected PortfolioHolding createPortfolioHolding(Portfolio portfolio, Stock stock) {
@@ -303,7 +291,7 @@ public class AbstractContainerBaseTest {
 		return targetPrices.stream()
 			.map(targetPrice -> TargetPriceNotification.newTargetPriceNotification(Money.won(targetPrice),
 				stockTargetPrice))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	protected List<StockDividend> createStockDividendWith(Stock stock) {
